# Environment-Harmonizer

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  RELEASE_NOTES.md  claude.md  docker-compose.yml  quickstart-windows.bat  quickstart-windows.ps1  quickstart.sh  requirements-dev.txt  requirements.txt  setup.py
docs/: PYINSTALLER.md
examples/: README.md
examples/healthy-project/: .harmonizer.json  README.md  main.py  requirements.txt
examples/missing-deps/: README.md  main.py  requirements.txt
examples/no-venv/: README.md  main.py  requirements.txt
examples/version-mismatch/: README.md  main.py  pyproject.toml  requirements.txt
harmonizer/: __init__.py  __main__.py  cli.py  models.py
harmonizer/detectors/: __init__.py  config_detector.py  dependency_detector.py  os_detector.py  python_detector.py  quirks_detector.py  venv_detector.py
harmonizer/fixers/: __init__.py  base_fixer.py  config_fixer.py  dependency_fixer.py  venv_fixer.py
harmonizer/reporters/: __init__.py  json_reporter.py  text_reporter.py
harmonizer/scanners/: __init__.py  project_scanner.py
harmonizer/utils/: __init__.py  cleanup.py  config.py  fallback.py  logging_config.py  performance.py  progress.py  subprocess_utils.py
tests/: __init__.py  test_dependency_detector.py  test_integration.py  test_os_detector.py  test_python_detector.py
