[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "version-mismatch-example"
version = "0.1.0"
description = "Example project demonstrating Python version requirements"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
